# reef-imagery-pipeline

./: .gitignore  CONTRIBUTING.md  README.md  README_bathy.md  README_v2.md  README_v3.md  SENTINEL_ANALYSIS_SUMMARY.md  analyze_images.py  best_clear_water_images.csv  dashboard_layers.json  enhancer.py  evaluate_all_shortlist.py  generate_reef_map.py  hybrid_stac_physical_orchestrator.py  local_cloud_pedra_alto_20260521_0310.csv  local_cloud_pedra_alto_20260530_0148.csv  local_cloud_pedra_alto_20260530_0150.csv  orchestrator.py  orchestrator_run.py  phase_b_calibrate_icesat2.py  plot_reef_bands.py  pyproject.toml  reef_imagery_pipeline.py  reef_ml_predictor.py  reef_ml_predictor_acolite.py  requirements.txt  requirements_v2.txt  run_benthic_physics_comparison.py  save_refined_image.py  save_refined_image_2019_09_07.py  save_refined_image_2022_09_26.py  save_refined_image_2024_09_30.py  save_refined_image_2025.py  save_refined_image_2025_09_02.py  save_refined_image_2025_09_15.py  save_refined_image_2025_09_25_original_coord.py  save_refined_image_2025_09_26.py  save_top_new_images.py  sentinel_spectral_analysis.ipynb  test_fft_cleanliness.py  (+6 more)
.claude/: settings.json
archive/: __init__.py  comparator.py  orchestrator.py  reef_imagery_pipeline_v2.py
artifacts/: bvi_training_data.json  pairwise_labels.csv  permutation_importance.json  training_features.csv
dashboard/: app.py  app.py.bak  index.html  index1.html  layers_meta.json
data/: pairwise_feature_contribution.csv  pairwise_features_baseline.csv  pairwise_result_summary.json  real_pairs_metadata.json  real_pairwise_labels.csv  training_features.csv
docs/: IH_BATHY_FEATURES.md
drift_reports/: drift_reef-orchestrator-2026-05-25T005515Z-depth16.json  drift_reef-orchestrator-2026-05-25T005832Z-depth16.json  history.csv  history.json  report.html
models/: bvi_model.pkl  bvi_weights.json  feature_ranker_metadata.json  feature_ranker_model.pkl  visibility_rf_bathy.json  visibility_rf_bathy.pkl
old/: satellite_data_sources_report.md  worldview3_access_research.md
outputs/: reef_viewer_37.053N_8.271W.html
scratch/: check_regional_bathy.py  download_and_process_olhao_faro.py  download_and_process_target_date.py  download_and_process_v3_best_dates.py  export_regional_geojson.py  find_best_clear_water_image.py
scripts/: algarve_reef_survey.py  (+43 more)
(+142 files in other folders)
