[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reef-imagery-pipeline"
version = "3.1.0"
description = "Satellite imagery processing for reef analysis and coastal bathymetry"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "3ruiruirui-sketch"}
]
keywords = ["satellite", "bathymetry", "reef", "sentinel-2", "remote-sensing", "sdb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Oceanography",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "rasterio>=1.3.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pyproj>=3.6.0",
    "scikit-image>=0.21.0",
    "requests>=2.31.0",
    "pystac-client>=0.7.0",
    "planetary-computer>=1.0.0",
    "shapely>=2.0.0",
    "python-dotenv>=1.0.0",
    "flask>=2.3.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/3ruiruirui-sketch/reef-imagery-pipeline"
Documentation = "https://github.com/3ruiruirui-sketch/reef-imagery-pipeline#readme"
Repository = "https://github.com/3ruiruirui-sketch/reef-imagery-pipeline"
Issues = "https://github.com/3ruiruirui-sketch/reef-imagery-pipeline/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
src = "src"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
